frontend/test/should_pass/computations_highlight.grg
using model_init;

function foo(n:Node) : string
{
	Debug::highlight(42, n, "bar");
	return("muh");
}

procedure bar(n:Node) : (string)
{
	Debug::highlight(42, n, "foo");
	return("muh");
}

test t()
{
	independent {
		n:Node;
		yield {
			Debug::highlight(42, n, "bar");
		}
	}
}

rule r()
{	
	n:Node;
	modify {
		def var vis:int;
		def var res:string;
		
		eval { 
			Debug::highlight(42, n, "bar");
		}
		eval {
			Debug::highlight(n, n, res, vis, "foo");
		}
	}
}
