frontend/test/should_fail/computations_decl_use_calls_type_mismatch_func_002b.grg
using model_init;

function func(b:B) : Node
{
	return(b);
}

rule r
{
	b:B;
	modify {
		eval {
			def b2:B = func(b);
		}
	}
}

